# tttt

./: .gitignore  Cargo.toml  Dockerfile  IMPLEMENTATION_VERIFICATION.md  README.md  build.rs  docker-entrypoint.sh  resume  test_insert_line.rs  test_insert_simple.rs  test_insert_standalone.rs
.github/workflows/: docker-publish.yml
crates/tttt-log/: Cargo.toml
crates/tttt-log/src/: error.rs  event.rs  lib.rs  multi.rs  replay.rs  sqlite.rs  text.rs
crates/tttt-mcp/: Cargo.toml
crates/tttt-mcp-tester/: Cargo.toml
crates/tttt-mcp-tester/src/: main.rs
crates/tttt-mcp/src/: error.rs  handler.rs  lib.rs  notification.rs  protocol.rs  proxy.rs  server.rs  tools.rs
crates/tttt-mcp/src/templates/: claude_permissions.textfsm  shell_permissions.textfsm
crates/tttt-pty/: Cargo.toml
crates/tttt-pty/src/: any_backend.rs  backend.rs  error.rs  keys.rs  lib.rs  manager.rs  restored.rs  screen.rs  session.rs
crates/tttt-sandbox/: Cargo.toml
crates/tttt-sandbox/src/: capability.rs  error.rs  lib.rs  profile.rs
crates/tttt-scheduler/: Cargo.toml
crates/tttt-scheduler/src/: error.rs  lib.rs
crates/tttt-tui/: Cargo.toml
crates/tttt-tui/src/: ansi.rs  input.rs  lib.rs  pane_renderer.rs  protocol.rs  pty_widget.rs  selection.rs  sidebar.rs  sidebar_widget.rs  viewer.rs  vt100_style.rs
crates/vt100/: Cargo.toml
crates/vt100/src/: attrs.rs  cell.rs  grid.rs  grid_test.rs  lib.rs  parser.rs  screen.rs  term.rs
docker/wrappers/: claude  codex  gemini  opencode
docs/: test-drive-prompt.md
docs/html/: tttt-slides.html
docs/plans/: 001-architecture.md  002-next-steps.md  003-detailed-implementation.md  004-live-reload-execv.md  005-session-replay.md  006-replay-tui.md  007-app-refactoring.md  008-ratatui-main-tui-migration.md  009-ratatui-attach-migration.md  010-mouse-copy-selection.md  011-c-port-features.md  tttt-ctl-integration.md
docs/technotes/: 001-render-pipeline-and-debouncing.md
docs/tests/: test-drive-report.md  test-prompt.md
docs/user-stories/: 000-index.md  001-session-lifecycle.md  002-message-submission.md  003-screen-reading.md  004-permission-handling.md  005-long-running-experiments.md  006-multi-executor-parallel.md  007-ui-state-machine.md  008-error-recovery.md  009-logging-and-replay.md  010-agent-agnostic-patterns.md  011-heterogeneous-ai-team.md  012-textfsmplus-interaction-engine.md  013-key-reference.md  014-self-injection.md  015-rate-limiting.md  016-bootstrap-prompt.md  999-lessons-from-the-field.md
docs/user-stories/questions/: a002-notification-injection-mechanics.md  a003-bracketed-paste-and-submission.md  a004-permission-auto-approve-safety.md  a005-priority-and-mvp.md  q001-textfsmplus-integration.md  q002-notification-injection-mechanics.md  q003-bracketed-paste-and-submission.md  q004-permission-auto-approve-safety.md  q005-priority-and-mvp.md
prompts/: resume.md
src/: app.rs  attach.rs  config.rs  ctl.rs  diag.rs  main.rs  reload.rs  replay_tui.rs
tests/: attach_bracketed_paste.rs  cursor_movement.rs  e2e_pty.rs  interactive_simulation.rs  mcp_integration.rs  mcp_tui_integration.rs  pty_real_integration.rs  screen_rendering.rs  test_drive_fixes.rs  viewer_integration.rs  working_dir.rs
