[workspace]
members = [
    "crates/vt100",
    "crates/tttt-pty",
    "crates/tttt-log",
    "crates/tttt-mcp",
    "crates/tttt-tui",
    "crates/tttt-scheduler",
    "crates/tttt-sandbox",
]
resolver = "2"

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vt100 = { path = "crates/vt100" }
portable-pty = "0.8"
nix = { version = "0.29", features = ["poll", "fs", "signal", "term"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "macros", "sync", "time"] }
signal-hook = "0.3"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[package]
name = "tttt"
version = "0.1.0"
edition = "2021"

[dependencies]
tttt-pty = { path = "crates/tttt-pty" }
tttt-log = { path = "crates/tttt-log" }
tttt-mcp = { path = "crates/tttt-mcp" }
tttt-tui = { path = "crates/tttt-tui" }
tttt-scheduler = { path = "crates/tttt-scheduler" }
tttt-sandbox = { path = "crates/tttt-sandbox" }
toml = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
nix = { workspace = true }
signal-hook = { workspace = true }
libc = "0.2"

[dev-dependencies]
serde_json = { workspace = true }
vt100 = { workspace = true }
tempfile = { workspace = true }
