[package]
name = "tttt-log"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
vt100 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
