[package]
name = "tttt-mcp-tester"
version = "0.1.0"
edition = "2021"
description = "Interactive MCP server tester - launches an MCP server and allows testing via stdin"

[[bin]]
name = "mcp-tester"
path = "src/main.rs"

[dependencies]
tttt-mcp = { path = "../tttt-mcp" }
tttt-pty = { path = "../tttt-pty" }
tttt-scheduler = { path = "../tttt-scheduler" }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "macros", "sync"] }
anyhow = "1.0"