[package]
name = "tttt-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
tttt-pty = { path = "../tttt-pty" }
tttt-scheduler = { path = "../tttt-scheduler" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = "1"
chrono = { workspace = true }
chrono-tz = "0.10"

[dev-dependencies]
tempfile = { workspace = true }
